[package]
name = "smt-lang"
version = "0.6.1"
edition = "2021"
authors = ["David Doose <David.Doose@gmail.com>"]
license = "LGPL-3.0-only"
description = "Sat Modulo Theory Language"
repository = "https://github.com/DavidD12/smt-lang"
readme = "README.md"
keywords = ["smt", "z3", "language", "solver"]
# exclude = ["files/*"]
include = [
    "**/*.rs",
    "**/*.lalrpop",
    "Cargo.toml",
    "Readme_crates.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1.6.0"
# pretty_env_logger = "0.4.0"
line-col = "0.2.1"
z3 = "0.11.2"
clap = { version = "4.0.18", features = ["derive"] }
fraction = "0.12.1"
d-stu = "0.1.5"
termion = "2.0.1"

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }

[lib]
name = "smt_lang"
path = "src/lib.rs"

[[bin]]
name = "smt-lang"
path = "bin/main.rs"

